Add video snippets to image pages.

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -296,17 +296,17 @@
                 <button id="headingsBtn" class="nav-link" href="#headings" data-bs-toggle="tab">Headings</button>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Image snippets</a>
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Image/Video + Text snippets</a>
                 <ul class="dropdown-menu">
-                    <li><button id="imgRightBtn" class="dropdown-item" href="#imgRight" data-bs-toggle="tab">Image right</button></li>
-                    <li><button id="imgLeftBtn" class="dropdown-item" href="#imgLeft" data-bs-toggle="tab">Image left</button></li>
-                    <li><button id="imgRight33Btn" class="dropdown-item" href="#imgRight33" data-bs-toggle="tab">Image right 33%
+                    <li><button id="imgRightBtn" class="dropdown-item" href="#imgRight" data-bs-toggle="tab">Image/Video right 50%</button></li>
+                    <li><button id="imgLeftBtn" class="dropdown-item" href="#imgLeft" data-bs-toggle="tab">Image/Video left 50%</button></li>
+                    <li><button id="imgRight33Btn" class="dropdown-item" href="#imgRight33" data-bs-toggle="tab">Image/Video right 33%
                             width</button></li>
-                    <li><button id="imgLeft33Btn" class="dropdown-item" href="#imgLeft33" data-bs-toggle="tab">Image left 33%
+                    <li><button id="imgLeft33Btn" class="dropdown-item" href="#imgLeft33" data-bs-toggle="tab">Image/Video left 33%
                             width</button></li>
-                    <li><button id="imgFloatRightBtn" class="dropdown-item" href="#imgFloatRight" data-bs-toggle="tab">Image float
+                    <li><button id="imgFloatRightBtn" class="dropdown-item" href="#imgFloatRight" data-bs-toggle="tab">Image/Video float
                             right</button></li>
-                    <li><button id="twoImgBtn" class="dropdown-item" href="#twoImgs" data-bs-toggle="tab">Two Images side by
+                    <li><button id="twoImgBtn" class="dropdown-item" href="#twoImgs" data-bs-toggle="tab">Two Images/Videos side by
                             side</button></li>
                 </ul>
             </li>
@@ -360,6 +360,19 @@
                         </div>
                     </div>
                 </div>
+                <h3 class="text-bg-uq p-2 mt-3">Text left/Video right</h3>
+                <div class="copythis">
+                    <div class="row">
+                        <div class="col-lg">
+                            <p>This is placeholder text</p>
+                        </div>
+                        <div class="col-lg">
+                            <div class="ratio ratio-16x9">
+                                <iframe src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="tab-pane fade" id="imgRight33" role="tabpanel">
                 <h3 class="text-bg-uq p-2">Image right 33%</h3>
@@ -370,6 +383,19 @@
                         </div>
                         <div class="col-lg-4">
                             <img class="img-fluid" src="https://uq-itali.github.io/uqlearnx/img/PLACEHOLDER.png" alt="" />
+                        </div>
+                    </div>
+                </div>
+                <h3 class="text-bg-uq p-2 mt-3">Video right 33%</h3>
+                <div class="copythis">
+                    <div class="row">
+                        <div class="col-lg">
+                            <p>This is placeholder text</p>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="ratio ratio-16x9">
+                                <iframe src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -386,14 +412,39 @@
                         </div>
                     </div>
                 </div>
+                <h3 class="text-bg-uq p-2 mt-3">Video left 33%</h3>
+                <div class="copythis">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="ratio ratio-16x9">
+                                <iframe src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div class="col-lg">
+                            <p>This is placeholder text</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="tab-pane fade" id="imgLeft" role="tabpanel">
-                <!--2 columns img on left-->
                 <h3 class="text-bg-uq p-2">Image left/Text right</h3>
                 <div class="copythis">
                     <div class="row">
                         <div class="col-lg">
                             <img class="img-fluid" src="https://uq-itali.github.io/uqlearnx/img/PLACEHOLDER.png" alt="" />
+                        </div>
+                        <div class="col-lg">
+                            <p>This is placeholder text</p>
+                        </div>
+                    </div>
+                </div>
+                <h3 class="text-bg-uq p-2 mt-3">Video left/Text right</h3>
+                <div class="copythis">
+                    <div class="row">
+                        <div class="col-lg">
+                            <div class="ratio ratio-16x9">
+                                <iframe src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allowfullscreen></iframe>
+                            </div>
                         </div>
                         <div class="col-lg">
                             <p>This is placeholder text</p>
@@ -406,8 +457,8 @@
                 <div class="copythis">
                     <div class="row">
                         <div class="col-lg">
-                            <div class="col-lg-6 float-lg-end">
-                                <img class="img-fluid ms-4" src="https://uq-itali.github.io/uqlearnx/img/PLACEHOLDER.png" alt="" />
+                            <div class="col-lg-6 float-lg-end m-2">
+                                <img class="img-fluid" src="https://uq-itali.github.io/uqlearnx/img/PLACEHOLDER.png" alt="" />
                             </div>
                             <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
                             <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
@@ -418,7 +469,43 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                <h3 class="text-bg-uq p-2 mt-3">Video float right</h3>
+                <div class="copythis">
+                    <div class="row">
+                        <div class="col-lg">
+                            <div class="col-lg-6 float-lg-end m-2">
+                                <div class="ratio ratio-16x9">
+                                <iframe src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is
+                            placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder
+                            text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to
+                            show this image floats.</p>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is
+                                placeholder text to show this image floats. This is placeholder text to show this image floats. This is
+                                placeholder text to show this image floats. This is placeholder text to show this image floats. This is
+                                placeholder text to show this image floats.</p>
+                                <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This
+                                    is placeholder text to show this image floats. This is placeholder text to show this image floats. This is
+                                    placeholder text to show this image floats. This is placeholder text to show this image floats. This is
+                                    placeholder text to show this image floats.</p>
+                                    <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats.
+                                        This is placeholder text to show this image floats. This is placeholder text to show this image floats.
+                                        This is placeholder text to show this image floats. This is placeholder text to show this image floats.
+                                        This is placeholder text to show this image floats.</p>
+                                        <p>This is placeholder text to show this image floats. This is placeholder text to show this image
+                                            floats. This is placeholder text to show this image floats. This is placeholder text to show this
+                                            image floats. This is placeholder text to show this image floats. This is placeholder text to show
+                                            this image floats. This is placeholder text to show this image floats.</p>
+                                            <p>This is placeholder text to show this image floats. This is placeholder text to show this image
+                                                floats. This is placeholder text to show this image floats. This is placeholder text to show
+                                                this image floats. This is placeholder text to show this image floats. This is placeholder text
+                                                to show this image floats. This is placeholder text to show this image floats.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
             <div class="tab-pane fade" id="twoImgs" role="tabpanel">
                 <h3 class="text-bg-uq p-2">Two images side by side</h3>
                 <div class="copythis">
@@ -428,6 +515,21 @@
                         </div>
                         <div class="col-lg">
                             <img class="img-fluid" src="https://uq-itali.github.io/uqlearnx/img/PLACEHOLDER.png" alt="" />
+                        </div>
+                    </div>
+                </div>
+                <h3 class="text-bg-uq p-2 mt-3">Two videos side by side</h3>
+                <div class="copythis">
+                    <div class="row">
+                        <div class="col-lg">
+                            <div class="ratio ratio-16x9">
+                                <iframe src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div class="col-lg">
+                            <div class="ratio ratio-16x9">
+                                <iframe src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
