Remove </cite> from variable

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -244,7 +244,7 @@
         var endQuoteWrapper = '</div>'
         var closeWrapper = '">'
         var figCaptionOpen = '<figcaption class="blockquote-footer mb-0 mt-4 text-end fs-6">';
-        var figCaptionClose = '</cite>\n</figcaption>\n</blockquote>\n</figure>';
+        var figCaptionClose = '\n</figcaption>\n</blockquote>\n</figure>';
         var quotationsRight = '<p class="mb-4"><span aria-hidden="true" class="fa fa-quote-right fa-pull-right fa-2x"></span></p>\n</div>'
         var vidResizedHead = "";
         //Placeholder variables so there is a placeholder preview for the user to see initially
