Add ability to vertically ctr txt + img

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -568,6 +568,24 @@
                                     <input class="form-check-input" name="imagePosition" id="imagePosition3" type="radio" value="floatRight">
                                     <label class="form-check-label" for="imagePosition3">Float right/text wrap</label>
                                 </div>
+                                <h5 class="font-weight-bold">Align text vertically<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose which side of the screen you would like your image on." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
+                                <div class="form-check form-check-inline" id="alignTextVert" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="alignTextVert" id="alignTextVert1" type="radio" value="" checked>
+                                    <label class="form-check-label" for="alignTextVert1">Top</label>
+                                </div>
+                                <div class="form-check form-check-inline" id="alignTextVert" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="alignTextVert" id="alignTextVert2" type="radio" value=" my-auto" >
+                                    <label class="form-check-label" for="alignTextVert2">Centre</label>
+                                </div>
+                                <h5 class="font-weight-bold">Align image vertically<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose which side of the screen you would like your image on." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
+                                <div class="form-check form-check-inline" id="alignImgVert" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="alignImgVert" id="alignImgVert1" type="radio" value="" checked>
+                                    <label class="form-check-label" for="alignImgVert1">Top</label>
+                                </div>
+                                <div class="form-check form-check-inline" id="alignImgVert" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="alignImgVert" id="alignImgVert2" type="radio" value=" my-auto">
+                                    <label class="form-check-label" for="alignImgVert2">Centre</label>
+                                </div>
                                 <h5 class="font-weight-bold mt-3">Image width<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose whether the image is half (1/2) the width of the screen or a quarter the size (1/4)" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="imageWidth" onchange="generateImgTextCode()">
                                     <input class="form-check-input" name="imageWidth" id="imageWidth1" type="radio" value="50" checked="">
