--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -549,6 +549,59 @@
                 <div class="copythis mt-3">
                     <h2 class="text-bg-dark p-2"><i class="fa-brands fa-youtube"></i> Watch</h2>
                 </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-psw-white"></span> Practical skills heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-clinical-plenary-white"></span> Clinical plenary heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-cpl-white"></span> Clinical and professional learning heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-immersion-white"></span> Immersion heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-lectorial-white"></span> Lectorial heading</h2>
+                </div>
+                
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-masterclass-white"></span> Masterclass heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-practical-white"></span> Practical heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-symposium-white"></span> Symposium heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-tbl-white"></span> TBL heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-workshop-white"></span> Workshop heading</h2>
+                </div>
+                <!--icons
+                <span class="uq-icon icon-psw-white"></span>
+<span class="uq-icon icon-clinical-plenary-white"></span>
+<span class="uq-icon icon-cpl-white"></span>
+<span class="uq-icon icon-immersion-white"></span>
+<span class="uq-icon icon-lectorial-white"></span>
+<span class="uq-icon icon-masterclass-white"></span>
+<span class="uq-icon icon-practical-white"></span>
+<span class="uq-icon icon-symposium-white"></span>
+<span class="uq-icon icon-tbl-white"></span>
+<span class="uq-icon icon-workshop-white"></span>
+-->
             </div>
             <div class="tab-pane fade" id="buildImgText" role="tabpanel">
                 <div class="row">
