--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -652,9 +652,75 @@
                                     <input class="form-check-input" name="imageWidth" id="imageWidth3" type="radio" value="25">
                                     <label class="form-check-label" for="imageWidth3">25% (1/4)</label>
                                 </div>
-                                <h5 class="font-weight-bold mt-3">Heading - Max 75 Characters<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Optional heading above content. Max 75 characters" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
+                                <h5 class="font-weight-bold mt-3">Heading - Max 75 Characters <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Optional heading above content. Max 75 characters" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <textarea onchange="generateImgTextCode()" id="headingText" maxlength="75" class="border border-dark rounded w-100 p-2" rows="1" placeholder="Optional heading above content. Max 75 characters"></textarea>
-                                <h5 class="font-weight-bold mt-3">Heading size<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose the size of your heading." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
+                                <h5 class="font-weight-bold mt-3">Heading Icon <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Include an icon if it relates to a specific structured learning experience." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
+                                
+                                <!--
+                                <span class="uq-icon icon-psw-white"></span>
+                                <span class="uq-icon icon-clinical-plenary-white"></span>
+                                <span class="uq-icon icon-cpl-white"></span>
+                                <span class="uq-icon icon-immersion-white"></span>
+                                <span class="uq-icon icon-lectorial-white"></span>
+                                <span class="uq-icon icon-masterclass-white"></span>
+                                <span class="uq-icon icon-practical-white"></span>
+                                <span class="uq-icon icon-symposium-white"></span>
+                                <span class="uq-icon icon-tbl-white"></span>
+                                <span class="uq-icon icon-workshop-white"></span>
+                                -->
+                                <div class="row bg-uq p-4 rounded-top">
+                                    <div class="col-lg d-flex justify-content-around">
+                                <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="headingIcon" id="noI" type="radio" value="noI" checked="""">
+                                    <label class="form-check-label text-white" for="noI">No icon</label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="headingIcon" id="psw" type="radio" value="psw">
+                                    <label class="form-check-label" for="psw"><span class="uq-icon icon-psw-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="headingIcon" id="clinical-plenary" type="radio" value="clinical-plenary">
+                                    <label class="form-check-label" for="clinical-plenary"><span class="uq-icon icon-clinical-plenary-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="headingIcon" id="cpl" type="radio" value="cpl">
+                                    <label class="form-check-label" for="cpl"><span class="uq-icon icon-cpl-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="headingIcon" id="immersion" type="radio" value="immersion">
+                                    <label class="form-check-label" for="immersion"><span class="uq-icon icon-immersion-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="headingIcon" id="lectorial" type="radio" value="lectorial">
+                                    <label class="form-check-label" for="lectorial"><span class="uq-icon icon-lectorial-white bg-uq p-3"></span></label>
+                                </div>
+                                </div>
+                                </div>
+                                <div class="row bg-uq p-4 rounded-bottom">
+                                    <div class="col-lg d-flex justify-content-around">
+                                <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="headingIcon" id="masterclass" type="radio" value="masterclass">
+                                    <label class="form-check-label" for="masterclass"><span class="uq-icon icon-masterclass-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="headingIcon" id="practical" type="radio" value="practical">
+                                    <label class="form-check-label" for="practical"><span class="uq-icon icon-practical-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="headingIcon" id="symposium" type="radio" value="symposium">
+                                    <label class="form-check-label" for="symposium"><span class="uq-icon icon-symposium-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="headingIcon" id="tbl" type="radio" value="tbl">
+                                    <label class="form-check-label" for="tbl"><span class="uq-icon icon-tbl-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="headingIcon" id="workshop" type="radio" value="workshop">
+                                    <label class="form-check-label" for="workshop"><span class="uq-icon icon-workshop-white bg-uq p-3"></span></label>
+                                </div>
+                                </div>
+                                </div>
+                                <h5 class="font-weight-bold mt-3">Heading size <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose the size of your heading." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="headSize" onchange="generateImgTextCode()">
                                     <input class="form-check-input" name="headSize" id="headSizeNone" type="radio" value="noH" checked>
                                     <label class="form-check-label" for="headSizeNone">No heading</label>
