--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -655,19 +655,6 @@
                                 <h5 class="font-weight-bold mt-3">Heading - Max 75 Characters <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Optional heading above content. Max 75 characters" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <textarea onchange="generateImgTextCode()" id="headingText" maxlength="75" class="border border-dark rounded w-100 p-2" rows="1" placeholder="Optional heading above content. Max 75 characters"></textarea>
                                 <h5 class="font-weight-bold mt-3">Heading Icon <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Include an icon if it relates to a specific structured learning experience." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
-                                
-                                <!--
-                                <span class="uq-icon icon-psw-white"></span>
-                                <span class="uq-icon icon-clinical-plenary-white"></span>
-                                <span class="uq-icon icon-cpl-white"></span>
-                                <span class="uq-icon icon-immersion-white"></span>
-                                <span class="uq-icon icon-lectorial-white"></span>
-                                <span class="uq-icon icon-masterclass-white"></span>
-                                <span class="uq-icon icon-practical-white"></span>
-                                <span class="uq-icon icon-symposium-white"></span>
-                                <span class="uq-icon icon-tbl-white"></span>
-                                <span class="uq-icon icon-workshop-white"></span>
-                                -->
                                 <div class="row bg-uq p-4 rounded-top">
                                     <div class="col-lg d-flex justify-content-around">
                                 <div class="form-check form-check-inline" id="headingIcon" onchange="generateImgTextCode()">
@@ -807,6 +794,59 @@
                                 </div>
                                 <h5 class="font-weight-bold mt-3">Heading - Max 75 Characters<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Optional heading above content. Max 75 characters" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <textarea onchange="generateVidTextCode()" id="vidHeadingText" maxlength="75" class="border border-dark rounded w-100 p-2" rows="1" placeholder="Optional heading above content. Max 75 characters"></textarea>
+                                <h5 class="font-weight-bold mt-3">Heading Icon <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Include an icon if it relates to a specific structured learning experience." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
+                                <div class="row bg-uq p-4 rounded-top">
+                                    <div class="col-lg d-flex justify-content-around">
+                                <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                    <input class="form-check-input" name="headingIconVid" id="noIV" type="radio" value="noI" checked="">
+                                    <label class="form-check-label text-white" for="noIV">No icon</label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                    <input class="form-check-input" name="headingIconVid" id="pswV" type="radio" value="psw">
+                                    <label class="form-check-label" for="pswV"><span class="uq-icon icon-psw-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                    <input class="form-check-input" name="headingIconVid" id="clinical-plenaryV" type="radio" value="clinical-plenary">
+                                    <label class="form-check-label" for="clinical-plenaryV"><span class="uq-icon icon-clinical-plenary-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                    <input class="form-check-input" name="headingIconVid" id="cplV" type="radio" value="cpl">
+                                    <label class="form-check-label" for="cplV"><span class="uq-icon icon-cpl-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                    <input class="form-check-input" name="headingIconVid" id="immersionV" type="radio" value="immersion">
+                                    <label class="form-check-label" for="immersionV"><span class="uq-icon icon-immersion-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                    <input class="form-check-input" name="headingIconVid" id="lectorialV" type="radio" value="lectorial">
+                                    <label class="form-check-label" for="lectorialV"><span class="uq-icon icon-lectorial-white bg-uq p-3"></span></label>
+                                </div>
+                                </div>
+                                </div>
+                                <div class="row bg-uq p-4 rounded-bottom">
+                                    <div class="col-lg d-flex justify-content-around">
+                                <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                    <input class="form-check-input" name="headingIconVid" id="masterclassV" type="radio" value="masterclass">
+                                    <label class="form-check-label" for="masterclassV"><span class="uq-icon icon-masterclass-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                    <input class="form-check-input" name="headingIconVid" id="practicalV" type="radio" value="practical">
+                                    <label class="form-check-label" for="practicalV"><span class="uq-icon icon-practical-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                    <input class="form-check-input" name="headingIconVid" id="symposiumV" type="radio" value="symposium">
+                                    <label class="form-check-label" for="symposiumV"><span class="uq-icon icon-symposium-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                    <input class="form-check-input" name="headingIconVid" id="tblV" type="radio" value="tbl">
+                                    <label class="form-check-label" for="tblV"><span class="uq-icon icon-tbl-white bg-uq p-3"></span></label>
+                                </div>
+                                <div class="form-check form-check-inline" id="headingIconVid" onchange="generateVidTextCode()">
+                                    <input class="form-check-input" name="headingIconVid" id="workshopV" type="radio" value="workshop">
+                                    <label class="form-check-label" for="workshopV"><span class="uq-icon icon-workshop-white bg-uq p-3"></span></label>
+                                </div>
+                                </div>
+                                </div>
                                 <h5 class="font-weight-bold mt-3">Heading size<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose the size of your heading." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="vidHeadSize" onchange="generateVidTextCode()">
                                     <input class="form-check-input" name="vidHeadSize" id="vidHeadSizeNone" type="radio" value="noH">
