Add border option for images

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -668,6 +668,15 @@
                                     <input class="form-check-input" name="alignImgVert" id="alignImgVert2" type="radio" value=" my-auto">
                                     <label class="form-check-label" for="alignImgVert2">Centre</label>
                                 </div>
+                                <h5 class="font-weight-bold">Image border<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose whether you would like the image to have a border." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
+                                <div class="form-check form-check-inline" id="imgBorder" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="imgBorder" id="imgBorder1" type="radio" value="" checked>
+                                    <label class="form-check-label" for="imgBorder1">No border</label>
+                                </div>
+                                <div class="form-check form-check-inline" id="imgBorder" onchange="generateImgTextCode()">
+                                    <input class="form-check-input" name="imgBorder" id="imgBorder2" type="radio" value=" img-thumbnail">
+                                    <label class="form-check-label" for="imgBorder2">Border</label>
+                                </div>
                                 <h5 class="font-weight-bold mt-3">Image width<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose whether the image is half (1/2) the width of the screen or a quarter the size (1/4)" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="imageWidth" onchange="generateImgTextCode()">
                                     <input class="form-check-input" name="imageWidth" id="imageWidth1" type="radio" value="50" checked="">
