--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -650,7 +650,8 @@
                                     <input class="form-check-input" name="imagePosition" id="imagePosition3" type="radio" value="floatRight">
                                     <label class="form-check-label" for="imagePosition3">Float right/text wrap</label>
                                 </div>
-                                <h5 class="font-weight-bold">Align text vertically<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose which side of the screen you would like your image on." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
+                                <hr>
+                                <h5 class="font-weight-bold mt-3">Align text vertically<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose which side of the screen you would like your image on." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="alignTextVert" onchange="generateImgTextCode()">
                                     <input class="form-check-input" name="alignTextVert" id="alignTextVert1" type="radio" value="" checked>
                                     <label class="form-check-label" for="alignTextVert1">Top</label>
@@ -659,7 +660,8 @@
                                     <input class="form-check-input" name="alignTextVert" id="alignTextVert2" type="radio" value=" my-auto" >
                                     <label class="form-check-label" for="alignTextVert2">Centre</label>
                                 </div>
-                                <h5 class="font-weight-bold">Align image vertically<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose which side of the screen you would like your image on." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
+                                <hr>
+                                <h5 class="font-weight-bold mt-3">Align image vertically<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose which side of the screen you would like your image on." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="alignImgVert" onchange="generateImgTextCode()">
                                     <input class="form-check-input" name="alignImgVert" id="alignImgVert1" type="radio" value="" checked>
                                     <label class="form-check-label" for="alignImgVert1">Top</label>
@@ -668,7 +670,8 @@
                                     <input class="form-check-input" name="alignImgVert" id="alignImgVert2" type="radio" value=" my-auto">
                                     <label class="form-check-label" for="alignImgVert2">Centre</label>
                                 </div>
-                                <h5 class="font-weight-bold">Image border<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose whether you would like the image to have a border." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
+                                <hr>
+                                <h5 class="font-weight-bold mt-3">Image border<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose whether you would like the image to have a border." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="imgBorder" onchange="generateImgTextCode()">
                                     <input class="form-check-input" name="imgBorder" id="imgBorder1" type="radio" value="" checked>
                                     <label class="form-check-label" for="imgBorder1">No border</label>
@@ -677,6 +680,7 @@
                                     <input class="form-check-input" name="imgBorder" id="imgBorder2" type="radio" value=" img-thumbnail">
                                     <label class="form-check-label" for="imgBorder2">Border</label>
                                 </div>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Image width<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose whether the image is half (1/2) the width of the screen or a quarter the size (1/4)" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="imageWidth" onchange="generateImgTextCode()">
                                     <input class="form-check-input" name="imageWidth" id="imageWidth1" type="radio" value="50" checked="">
@@ -690,8 +694,10 @@
                                     <input class="form-check-input" name="imageWidth" id="imageWidth3" type="radio" value="25">
                                     <label class="form-check-label" for="imageWidth3">25% (1/4)</label>
                                 </div>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Heading - Max 75 Characters <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Optional heading above content. Max 75 characters" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <textarea onchange="generateImgTextCode()" id="headingText" maxlength="75" class="border border-dark rounded w-100 p-2" rows="1" placeholder="Optional heading above content. Max 75 characters"></textarea>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Heading Icon <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Include an icon if it relates to a specific structured learning experience." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="row bg-uq p-4 rounded-top">
                                     <div class="col-lg d-flex justify-content-around">
@@ -745,6 +751,7 @@
                                 </div>
                                 </div>
                                 </div>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Heading size <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose the size of your heading." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="headSize" onchange="generateImgTextCode()">
                                     <input class="form-check-input" name="headSize" id="headSizeNone" type="radio" value="noH" checked>
@@ -762,12 +769,16 @@
                                         <h2 class="text-bg-uq p-2 m-0">Main heading</h2>
                                     </label>
                                 </div>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Write your text<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Type in the text you would like to appear with your image." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle"></i></span></h5>
                                 <textarea class="border border-dark rounded w-100" id="tinyMCEimg" onkeyup=generateImgTextCode()></textarea>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Paste your image link<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="The web link from LearnX to the image you would like to appear in your selected element." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle"></i></span></h5>
                                 <textarea onchange="generateImgTextCode()" id="imgLink" class="border border-dark rounded w-100 p-2" rows="1" placeholder="Paste your LearnX web link to your image link here."></textarea>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Type your alt text<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="The description of your image you would like to appear when a user hovers over the image or uses a screen reader" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle"></i></span></h5>
                                 <textarea onkeyup="generateImgTextCode()" id="altText" class="border border-dark rounded w-100 p-2" rows="1" placeholder="Type your alt text here."></textarea>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Type your caption text<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Type in the caption you would like to appear underneath your image." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle"></i></span></h5>
                                 <textarea onkeyup="generateImgTextCode()" id="tinyMCEcaption" class="border border-dark rounded w-100 p-2" rows="1" placeholder="Type your caption text here."></textarea>
                             </div>
@@ -813,6 +824,7 @@
                                     <label class="form-check-label" for="videoPosition3">Float right/text wrap</label>
                                 </div>
                             </div>
+                            <hr>
                                 <h5 class="font-weight-bold mt-3">Video width<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose whether the video is half (1/2) the width of the screen or a quarter the size (1/4)" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="videoWidth" onchange="generateVidTextCode()">
                                     <input class="form-check-input" name="videoWidth" id="videoWidth1" type="radio" value="50" checked="">
@@ -830,8 +842,10 @@
                                     <input class="form-check-input" name="videoWidth" id="videoWidth0" type="radio" value="0">
                                     <label class="form-check-label" for="videoWidth0">Video only</label>
                                 </div>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Heading - Max 75 Characters<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Optional heading above content. Max 75 characters" class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <textarea onchange="generateVidTextCode()" id="vidHeadingText" maxlength="75" class="border border-dark rounded w-100 p-2" rows="1" placeholder="Optional heading above content. Max 75 characters"></textarea>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Heading Icon <span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Include an icon if it relates to a specific structured learning experience." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="row bg-uq p-4 rounded-top">
                                     <div class="col-lg d-flex justify-content-around">
@@ -885,6 +899,7 @@
                                 </div>
                                 </div>
                                 </div>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Heading size<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Choose the size of your heading." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle" aria-hidden="true"></i></span></h5>
                                 <div class="form-check form-check-inline" id="vidHeadSize" onchange="generateVidTextCode()">
                                     <input class="form-check-input" name="vidHeadSize" id="vidHeadSizeNone" type="radio" value="noH">
@@ -908,12 +923,15 @@
                                         <h2 class="text-bg-dark p-2 m-0"><span class="fa-brands fa-youtube"></span> Watch heading</h2>
                                     </label>
                                 </div>
+                                <hr>
                                 <div id="vidTextTiny">
                                 <h5 class="font-weight-bold mt-3">Write your text<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Type in the text you would like to appear with your video." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle"></i></span></h5>
                                 <textarea class="border border-dark rounded w-100" id="tinyMCEvid" onkeyup=generateVidTextCode()></textarea>
                                 </div>
+                                <hr>
                                 <h5 class="font-weight-bold mt-3">Paste your video link<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="The web link from the Kaltura/YouTube/Vimeo/mp4 web link from LearnX video you would like to appear in your selected element." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle"></i></span></h5>
                                 <textarea onchange="generateVidTextCode()" id="vidLink" class="border border-dark rounded w-100 p-2" rows="1" placeholder="This space accepts Kaltura iframes, YouTube, Vimeo, and mp4 web links from LearnX."></textarea>
+                                <hr>
                                 <div id="vidSmallTitle">
                                 <h5 class="font-weight-bold mt-3">Type your video title text<span data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Type in the title you would like to appear above your video." class="hideableinstruct text-success small">&nbsp;<i class="fa fa-question-circle"></i></span></h5>
                                 <textarea onkeyup="generateVidTextCode()" id="vidTitleText" class="border border-dark rounded w-100 p-2" rows="1" placeholder="Type your video title text here."></textarea>
